--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,10 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentEnd="false"
         android:id="@+id/compass"
-        android:layout_margin="32dp"/>
+        android:layout_margin="32dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"/>
 
 </RelativeLayout>
