--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -23,12 +23,12 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <EditText
+        <TextView
             android:id="@+id/location_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/location"
-            android:inputType="number"/>
+            android:textAppearance="@android:style/TextAppearance.Large"/>
 
         <LinearLayout
             android:id="@+id/species_container"
@@ -37,7 +37,7 @@
             android:orientation="vertical"/>
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/notes_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
