--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:icon="@drawable/ic_cloud_upload_white_24dp"
+        android:title="@string/upload"
+        android:id="@+id/upload_item"
+        app:showAsAction="ifRoom" />
     <item
         android:icon="@drawable/ic_edit_white_24dp"
         android:title="@string/edit"
