Finished upload (currently uses a test spreadsheet)

--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -35,6 +35,6 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/notes"
-            android:inputType="textMultiLine"/>
+            android:inputType="textMultiLine|textCapSentences"/>
     </LinearLayout>
 </ScrollView>
