--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,23 @@
     tools:context="org.samcrow.ridgesurvey.MainActivity"
     >
 
+    <org.samcrow.ridgesurvey.UploadStatusBar
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:id="@+id/upload_status_bar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
     <org.mapsforge.map.android.view.MapView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         android:id="@+id/map"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/upload_status_bar"/>
 
     <org.samcrow.ridgesurvey.Compass
         android:layout_width="96dp"
