--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- StatusBar colors -->
+    <color name="status_bar_ok">#09A129</color>
+    <color name="status_bar_need_upload">#F7B32B</color>
+    <color name="status_bar_in_progress">#3B1C40</color>
 </resources>
