--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,13 +36,13 @@
 
     <org.mapsforge.map.android.view.MapView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:id="@+id/map"
         android:clickable="true"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/upload_status_bar"/>
+        android:layout_below="@+id/upload_status_bar"
+        android:layout_alignParentBottom="true"/>
 
     <org.samcrow.ridgesurvey.Compass
         android:layout_width="96dp"
