--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,7 @@
     <color name="status_bar_ok">#09A129</color>
     <color name="status_bar_need_upload">#F7B32B</color>
     <color name="status_bar_in_progress">#95EDE5</color>
+
+    <!-- Map colors -->
+    <color name="map_route_line">#CCC</color>
 </resources>
