--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
     tools:context="org.samcrow.ridgesurvey.MainActivity"
     >
 
-    <org.samcrow.ridgesurvey.UploadStatusBar
+    <org.samcrow.ridgesurvey.data.UploadStatusBar
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:id="@+id/upload_status_bar"
