--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,23 +34,40 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
-    <org.mapsforge.map.android.view.MapView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/map"
-        android:clickable="true"
+        android:layout_below="@+id/upload_status_bar"
+        android:layout_above="@+id/timer_fragment">
+
+        <org.mapsforge.map.android.view.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/upload_status_bar"
+            android:clickable="true"/>
+
+        <org.samcrow.ridgesurvey.Compass
+            android:id="@+id/compass"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_margin="32dp"/>
+    </RelativeLayout>
+
+    <fragment
+        android:id="@+id/timer_fragment"
+        android:name="org.samcrow.ridgesurvey.TimerFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/upload_status_bar"
-        android:layout_alignParentBottom="true"/>
-
-    <org.samcrow.ridgesurvey.Compass
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/compass"
-        android:layout_margin="32dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
