--- a/app/src/main/res/menu/observations_menu.xml
+++ b/app/src/main/res/menu/observations_menu.xml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright 2017 Sam Crow
+  ~
+  ~ This file is part of JRBP Survey.
+  ~
+  ~ JRBP Survey is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ JRBP Survey is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with JRBP Survey.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/force_upload_item"
         android:icon="@drawable/ic_cloud_upload_white_24dp"
-        android:title="Force upload"
+        android:title="@string/force_upload"
         app:showAsAction="always"/>
 </menu>
