--- a/app/src/main/res/layout/start_route_form.xml
+++ b/app/src/main/res/layout/start_route_form.xml
@@ -42,7 +42,7 @@
         android:layout_columnSpan="2"
         android:layout_row="0"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName|textCapWords" />
 
     <EditText
         android:id="@+id/fieldSensorId"
