--- a/app/src/main/res/layout/start_route_form.xml
+++ b/app/src/main/res/layout/start_route_form.xml
@@ -17,87 +17,80 @@
   ~ along with JRBP Survey.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:columnCount="3"
-    android:padding="@dimen/timer_margin"
-    android:rowCount="4">
+    android:padding="@dimen/start_route_margin"
+    app:columnCount="3"
+    app:rowCount="5">
 
-    <EditText
-        android:id="@+id/fieldTabletId"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/newRouteFormStartButton"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_row="1"
-        android:ems="10"
-        android:inputType="textShortMessage|number" />
+        android:layout_marginTop="30dp"
+        android:text="Start"
+        android:textSize="34sp"
+        app:layout_column="0"
+        app:layout_columnSpan="2"
+        app:layout_row="4" />
 
     <EditText
         android:id="@+id/fieldSurveyorName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_row="0"
+        android:layout_marginLeft="@dimen/start_route_margin"
+        android:layout_marginStart="@dimen/start_route_margin"
         android:ems="10"
-        android:inputType="textPersonName|textCapWords" />
+        android:inputType="textPersonName|textCapWords"
+        android:minHeight="@dimen/start_route_text_min_height"
+        app:layout_column="1"
+        app:layout_columnSpan="2"
+        app:layout_row="0" />
 
     <EditText
         android:id="@+id/fieldSensorId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_row="2"
+        android:layout_marginLeft="@dimen/start_route_margin"
+        android:layout_marginStart="@dimen/start_route_margin"
         android:ems="10"
-        android:inputType="textShortMessage|number" />
+        android:inputType="textShortMessage|number"
+        android:minHeight="@dimen/start_route_text_min_height"
+        app:layout_column="1"
+        app:layout_columnSpan="2"
+        app:layout_row="2" />
 
-    <TextView
-        android:id="@+id/labelRoute"
+    <EditText
+        android:id="@+id/fieldTabletId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_gravity="start|center_vertical"
-        android:layout_row="3"
-        android:text="Route" />
-
-    <TextView
-        android:id="@+id/labelTabletId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_row="1"
-        android:text="Tablet ID" />
-
-    <TextView
-        android:id="@+id/labelSensorId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_row="2"
-        android:text="Sensor ID" />
-
-    <TextView
-        android:id="@+id/labelName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_row="0"
-        android:text="Your name" />
+        android:layout_marginLeft="@dimen/start_route_margin"
+        android:layout_marginStart="@dimen/start_route_margin"
+        android:ems="10"
+        android:inputType="textShortMessage|number"
+        android:minHeight="@dimen/start_route_text_min_height"
+        app:layout_column="1"
+        app:layout_columnSpan="2"
+        app:layout_row="1" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_column="1"
-        android:layout_row="3"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_column="1"
+        app:layout_row="3">
 
         <Button
             android:id="@+id/buttonSelectRoute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/start_route_margin"
+            android:layout_marginLeft="@dimen/start_route_margin"
+            android:layout_marginRight="@dimen/start_route_margin"
+            android:layout_marginStart="@dimen/start_route_margin"
             android:gravity="center_horizontal|center_vertical"
             android:text="Select" />
 
@@ -109,4 +102,41 @@
             android:text="None"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
     </LinearLayout>
-</GridLayout>
+
+    <TextView
+        android:id="@+id/labelSensorId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sensor ID"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_column="0"
+        app:layout_row="2" />
+
+    <TextView
+        android:id="@+id/labelName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_column="0"
+        app:layout_row="0" />
+
+    <TextView
+        android:id="@+id/labelRoute"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Route"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_column="0"
+        app:layout_gravity="start|center_vertical"
+        app:layout_row="3" />
+
+    <TextView
+        android:id="@+id/labelTabletId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tablet ID"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_column="0"
+        app:layout_row="1" />
+</android.support.v7.widget.GridLayout>
