--- a/app/src/main/res/layout/start_route_form.xml
+++ b/app/src/main/res/layout/start_route_form.xml
@@ -17,7 +17,7 @@
   ~ along with JRBP Survey.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -27,11 +27,10 @@
 
     <Button
         android:id="@+id/newRouteFormStartButton"
-        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Start"
+        android:text="Save / Start"
         android:textSize="34sp"
         app:layout_column="0"
         app:layout_columnSpan="2"
@@ -139,4 +138,4 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_column="0"
         app:layout_row="1" />
-</android.support.v7.widget.GridLayout>
+</androidx.gridlayout.widget.GridLayout>
