--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -22,11 +22,6 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:icon="@drawable/ic_cloud_upload_white_24dp"
-        android:title="@string/upload"
-        android:id="@+id/upload_item"
-        app:showAsAction="always" />
-    <item
         android:id="@+id/home_item_place_sensor"
         android:icon="@drawable/outline_file_download_white_36"
         android:title="Place sensor"
@@ -45,5 +40,13 @@
         android:icon="@drawable/ic_menu_white_24dp"
         android:title="@string/view_observations"
         android:id="@+id/view_observations_item"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/view_events_item"
+        android:title="View events" />
+    <item
+        android:id="@+id/upload_item"
+        android:icon="@drawable/ic_cloud_upload_white_24dp"
+        android:title="@string/upload"
         app:showAsAction="ifRoom" />
 </menu>
