--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,21 +32,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
-    <RelativeLayout
+
+    <org.maplibre.android.maps.MapView
+        android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/upload_status_bar"
-        android:layout_above="@+id/timer_fragment">
+        android:layout_above="@+id/timer_fragment"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-        <org.mapsforge.map.android.view.MapView
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:clickable="true"/>
-
-    </RelativeLayout>
 
     <fragment
         android:id="@+id/timer_fragment"
