--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -17,7 +17,6 @@
   -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -36,16 +35,16 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Start new route"
+            android:text="@string/start_new_route"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textSize="34sp" />
+            android:textSize="@dimen/welcome_large_text_size" />
 
         <Button
             android:id="@+id/buttonStartNew"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Start"
-            android:textSize="34sp" />
+            android:text="@string/start"
+            android:textSize="@dimen/welcome_large_text_size" />
 
         <View
             android:id="@+id/divider"
@@ -59,24 +58,24 @@
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Resume route"
+            android:text="@string/resume_route"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textSize="34sp" />
+            android:textSize="@dimen/welcome_large_text_size" />
 
         <TextView
             android:id="@+id/routeInformationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Route information"
+            android:text="@string/route_information"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textSize="34sp" />
+            android:textSize="@dimen/welcome_large_text_size" />
 
         <Button
             android:id="@+id/buttonResume"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Resume"
-            android:textSize="34sp" />
+            android:text="@string/resume"
+            android:textSize="@dimen/welcome_large_text_size" />
 
         <View
             android:id="@+id/divider2"
@@ -90,16 +89,16 @@
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Test mode"
+            android:text="@string/test_mode"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textSize="34sp" />
+            android:textSize="@dimen/welcome_large_text_size" />
 
         <Button
             android:id="@+id/buttonTestMode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Test"
-            android:textSize="34sp" />
+            android:text="@string/test"
+            android:textSize="@dimen/welcome_large_text_size" />
 
     </LinearLayout>
 
